--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "ng-tab-com",
+  "name": "tab-com",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "publish":"cd dist/tab-com && npm publish"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +18,6 @@
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
     "@angular/forms": "~11.2.7",
-    "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
@@ -30,6 +30,7 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@angular/material": "^11.2.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
