--- a/projects/tab-com/package.json
+++ b/projects/tab-com/package.json
@@ -1,11 +1,15 @@
 {
   "name": "tab-com",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "peerDependencies": {
     "@angular/common": "^10.1.1",
     "@angular/core": "^10.1.1"
   },
   "dependencies": {
     "tslib": "^2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/deepak-thomas/tab-com"
   }
 }
